--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <h4>Scores of the students in Mr. Ade's SS2 class of St. Benedict High School</h4>
+    <h4 id="heading">Scores of the students in Mr. Ade's SS2 class of St. Benedict High School</h4>
     <table>
         <tr>
           <th class="heading">Serial No.</th>
